left_sidebar: Prevent wrap on channel folder names.

--- a/web/styles/left_sidebar.css
+++ b/web/styles/left_sidebar.css
@@ -12,6 +12,7 @@
        or controls in the row. */
     overflow: hidden;
     text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
 #left-sidebar .input-element-wrapper {
